--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "baseProject",
-  "version": "1.0.0",
-  "description": "",
+  "name": "template-project-mongoose",
+  "version": "1.0.1",
+  "description": "template project for lazy-backend-generator",
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Mateus Gomes",
   "license": "ISC",
   "dependencies": {
-                                    "bcrypt": "^3.0.2",
+    "bcrypt": "^3.0.2",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-async-handler": "^1.1.4",
     "express-validation": "^1.0.2",
     "joi": "^14.3.0",
-                                      "jsonwebtoken": "^8.4.0",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.0",
     "mongoose-paginate": "^5.0.3",
     "require-dir": "^1.2.0",
