--- a/package.json
+++ b/package.json
@@ -19,16 +19,13 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.0",
     "mongoose-paginate": "^5.0.3",
+    "morgan": "^1.9.1",
     "require-dir": "^1.2.0",
     "youch": "^2.0.10"
   },
   "devDependencies": {
-    "eslint": "^5.10.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "nodemon": "^1.18.8"
+    "eslint": "^5.14.1",
+    "nodemon": "^1.18.8",
+    "standard": "^12.0.1"
   }
 }
